<pre> width would overflow when scrollbars appear, so fixing that

--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -88,7 +88,7 @@ textarea.placeholder, input.placeholder
       bottom: 10px
     overflow: auto
     padding: 5px 10px
-    width: 540px
+    width: 500px
   table
     font-size: 12px
     border: 1px solid #bbbbbb
